tests/negative/gold/incomplete-comments2-test.gold
tests/negative/incomplete-comments2-test.toit:6:5: warning: Nested multi-line comments are deprecated. Use heredocs instead.
  /*/*
    ^~
tests/negative/incomplete-comments2-test.toit:6:3: error: Unterminated multi-line comment
  /*/*
  ^~~~
Compilation failed
